_/data/documentations/numpy/numpy/typing/tests/data/fail/npyio_pyi.comment
['text':' E: incompatible type','line_number':13,'multiline':False]['text':' E: incompatible type','line_number':15,'multiline':False]['text':' E: incompatible type','line_number':17,'multiline':False]['text':' E: incompatible type','line_number':19,'multiline':False]['text':' E: incompatible type','line_number':21,'multiline':False]['text':' E: No overload variant','line_number':23,'multiline':False]